--- a/index.html
+++ b/index.html
@@ -37,19 +37,26 @@
     </div>
   
     <h2 class="label">Romania</h2>
-    <div class="flag" style="">
+    <div class="flag" style="display:flex;">
       <!-- insert flag here -->
+      <div class="romania-blue"></div>
+      <div class="romania-yellow"></div>
+      <div class="romania-red"></div>
+
     </div>
   
     <h2 class="label">Mexico</h2>
-    <div class="flag">
+    <div class="flag" style="display:flex;">
       <!-- insert flag here -->
+      <div class="mexico-green"></div>
+      <img src="eagle.png">
+      <div class="mexico-red"></div>
     </div>
 
     <h2>Margin</h2>
     <div class="margin-container">
-      <div class="flag"></div>
-      <div class="flag"></div>
+      <div class="flag1"></div>
+      <div class="flag2"></div>
     </div>
 
     <h2>Padding</h2>
